--- a/ScaleModelCatalog/Base.lproj/Main.storyboard
+++ b/ScaleModelCatalog/Base.lproj/Main.storyboard
@@ -1,24 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EL6-gM-knO">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="BKn-Dg-rNI">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController id="dOB-hb-ySc" customClass="ViewController" customModule="ScaleModelCatalog" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="2Ee-oa-gy2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7Iq-t6-uiE">
+                            <size key="itemSize" width="120" height="150"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Model" id="OH4-7G-S1Q" customClass="ModelCell" customModule="ScaleModelCatalog" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="120" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rXN-DB-uiU">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ifm-pX-iuI">
+                                            <rect key="frame" x="10" y="10" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBZ-BE-41y">
+                                            <rect key="frame" x="10" y="118" width="100" height="24"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="ModelImage" destination="Ifm-pX-iuI" id="GHB-aQ-ZsK"/>
+                                    <outlet property="ModelName" destination="mBZ-BE-41y" id="WoE-0H-K4d"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="dOB-hb-ySc" id="ovz-pw-TGa"/>
+                            <outlet property="delegate" destination="dOB-hb-ySc" id="pf7-1z-zOr"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="AMS-su-sG9"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YIB-B0-m5x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-125294" y="-754"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="uNq-HU-jW8">
+            <objects>
+                <viewController storyboardIdentifier="DetailModel" id="N45-qs-rzA" customClass="DetailViewController" customModule="ScaleModelCatalog" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7pC-Oa-cJh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Default specification for model" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fDj-Z4-e24">
+                                <rect key="frame" x="20" y="461" width="374" height="401"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LyW-gm-NuU">
+                                <rect key="frame" x="20" y="44" width="374" height="409"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="LyW-gm-NuU" firstAttribute="top" secondItem="tCJ-OO-gcv" secondAttribute="top" id="1se-6Z-TUX"/>
+                            <constraint firstItem="tCJ-OO-gcv" firstAttribute="trailing" secondItem="fDj-Z4-e24" secondAttribute="trailing" constant="20" id="5R4-Qx-RxR"/>
+                            <constraint firstItem="fDj-Z4-e24" firstAttribute="leading" secondItem="tCJ-OO-gcv" secondAttribute="leading" constant="20" id="9hC-cw-Cau"/>
+                            <constraint firstItem="tCJ-OO-gcv" firstAttribute="trailing" secondItem="LyW-gm-NuU" secondAttribute="trailing" constant="20" id="BMj-Jt-jkz"/>
+                            <constraint firstItem="LyW-gm-NuU" firstAttribute="bottom" secondItem="tCJ-OO-gcv" secondAttribute="centerY" id="E7a-w1-Gsm"/>
+                            <constraint firstItem="fDj-Z4-e24" firstAttribute="top" secondItem="LyW-gm-NuU" secondAttribute="bottom" constant="8" id="QMy-Tj-Tj2"/>
+                            <constraint firstItem="tCJ-OO-gcv" firstAttribute="bottom" secondItem="fDj-Z4-e24" secondAttribute="bottom" id="bIV-eD-dtR"/>
+                            <constraint firstItem="LyW-gm-NuU" firstAttribute="leading" secondItem="tCJ-OO-gcv" secondAttribute="leading" constant="20" id="pma-XC-SSf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tCJ-OO-gcv"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageModel" destination="LyW-gm-NuU" id="riE-3F-fC2"/>
+                        <outlet property="specModelText" destination="fDj-Z4-e24" id="jkX-Or-eoH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N2J-DS-GOu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-124500.00000000001" y="-754.01785714285711"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="wn0-RD-anH">
+            <objects>
+                <viewController storyboardIdentifier="ImageView" id="rmD-Nd-WeP" customClass="ImageViewController" customModule="ScaleModelCatalog" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AEC-Db-r5F">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPE-Or-geC">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Car.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="WW1-bw-6V2">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="bottom" secondItem="uDZ-e2-vWr" secondAttribute="bottom" id="4KL-U2-frk"/>
+                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="centerX" secondItem="ZPE-Or-geC" secondAttribute="centerX" id="Ewu-Lg-Bjl"/>
+                                    <constraint firstAttribute="bottom" secondItem="WW1-bw-6V2" secondAttribute="bottom" id="Uwd-tm-zVh"/>
+                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="leading" secondItem="uDZ-e2-vWr" secondAttribute="leading" id="dxx-hE-B3O"/>
+                                    <constraint firstAttribute="trailing" secondItem="WW1-bw-6V2" secondAttribute="trailing" id="oeI-oF-ful"/>
+                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="top" secondItem="tQh-ew-z6L" secondAttribute="top" id="sbI-KB-lYk"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="tQh-ew-z6L"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="uDZ-e2-vWr"/>
+                                <connections>
+                                    <outlet property="delegate" destination="rmD-Nd-WeP" id="Uge-uA-8Zg"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ZPE-Or-geC" firstAttribute="leading" secondItem="Tag-09-gZW" secondAttribute="leading" id="8m1-iz-Cw4"/>
+                            <constraint firstItem="ZPE-Or-geC" firstAttribute="centerX" secondItem="AEC-Db-r5F" secondAttribute="centerX" id="DsJ-E2-fs6"/>
+                            <constraint firstItem="ZPE-Or-geC" firstAttribute="centerY" secondItem="AEC-Db-r5F" secondAttribute="centerY" id="N3M-dy-xxe"/>
+                            <constraint firstItem="ZPE-Or-geC" firstAttribute="top" secondItem="AEC-Db-r5F" secondAttribute="topMargin" constant="-44" id="iw6-Qi-lNb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Tag-09-gZW"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="WW1-bw-6V2" id="SS7-Nf-uK7"/>
+                        <outlet property="scrollView" destination="ZPE-Or-geC" id="xrU-GO-r0V"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PPp-ef-KPA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-123717.39130434784" y="-754.01785714285711"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Zxa-ca-cTD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EL6-gM-knO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8hh-W3-dK5">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dOB-hb-ySc" kind="relationship" relationship="rootViewController" id="bmt-xh-UgM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XO5-I7-iRH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-126201" y="-754"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Car.jpg" width="204.47999572753906" height="204.47999572753906"/>
+    </resources>
 </document>
