--- a/ScaleModelCatalog/Base.lproj/Main.storyboard
+++ b/ScaleModelCatalog/Base.lproj/Main.storyboard
@@ -109,40 +109,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZPE-Or-geC">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZgN-cY-EVE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Car.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="WW1-bw-6V2">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X5o-UZ-ylq">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="bottom" secondItem="uDZ-e2-vWr" secondAttribute="bottom" id="4KL-U2-frk"/>
-                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="centerX" secondItem="ZPE-Or-geC" secondAttribute="centerX" id="Ewu-Lg-Bjl"/>
-                                    <constraint firstAttribute="bottom" secondItem="WW1-bw-6V2" secondAttribute="bottom" id="Uwd-tm-zVh"/>
-                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="leading" secondItem="uDZ-e2-vWr" secondAttribute="leading" id="dxx-hE-B3O"/>
-                                    <constraint firstAttribute="trailing" secondItem="WW1-bw-6V2" secondAttribute="trailing" id="oeI-oF-ful"/>
-                                    <constraint firstItem="WW1-bw-6V2" firstAttribute="top" secondItem="tQh-ew-z6L" secondAttribute="top" id="sbI-KB-lYk"/>
+                                    <constraint firstItem="X5o-UZ-ylq" firstAttribute="leading" secondItem="ZgN-cY-EVE" secondAttribute="leading" id="5l1-KJ-o8q"/>
+                                    <constraint firstAttribute="bottom" secondItem="X5o-UZ-ylq" secondAttribute="bottom" id="CCV-xK-aNX"/>
+                                    <constraint firstAttribute="trailing" secondItem="X5o-UZ-ylq" secondAttribute="trailing" id="Vod-SY-C21"/>
+                                    <constraint firstItem="X5o-UZ-ylq" firstAttribute="top" secondItem="ZgN-cY-EVE" secondAttribute="top" id="ZnC-Bg-hJo"/>
+                                    <constraint firstItem="X5o-UZ-ylq" firstAttribute="width" secondItem="ZgN-cY-EVE" secondAttribute="width" id="lIj-mA-NOB"/>
+                                    <constraint firstItem="X5o-UZ-ylq" firstAttribute="height" secondItem="ZgN-cY-EVE" secondAttribute="height" id="xeN-KB-n9o"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="tQh-ew-z6L"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="uDZ-e2-vWr"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="ev5-Oz-z8w"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="zFf-U7-2Rc"/>
                                 <connections>
-                                    <outlet property="delegate" destination="rmD-Nd-WeP" id="Uge-uA-8Zg"/>
+                                    <outlet property="delegate" destination="rmD-Nd-WeP" id="cuD-m3-hST"/>
                                 </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ZPE-Or-geC" firstAttribute="leading" secondItem="Tag-09-gZW" secondAttribute="leading" id="8m1-iz-Cw4"/>
-                            <constraint firstItem="ZPE-Or-geC" firstAttribute="centerX" secondItem="AEC-Db-r5F" secondAttribute="centerX" id="DsJ-E2-fs6"/>
-                            <constraint firstItem="ZPE-Or-geC" firstAttribute="centerY" secondItem="AEC-Db-r5F" secondAttribute="centerY" id="N3M-dy-xxe"/>
-                            <constraint firstItem="ZPE-Or-geC" firstAttribute="top" secondItem="AEC-Db-r5F" secondAttribute="topMargin" constant="-44" id="iw6-Qi-lNb"/>
+                            <constraint firstItem="ZgN-cY-EVE" firstAttribute="top" secondItem="Tag-09-gZW" secondAttribute="top" id="B2h-IH-Y0b"/>
+                            <constraint firstItem="Tag-09-gZW" firstAttribute="bottom" secondItem="ZgN-cY-EVE" secondAttribute="bottom" id="Iq7-Pp-j1A"/>
+                            <constraint firstItem="ZgN-cY-EVE" firstAttribute="leading" secondItem="Tag-09-gZW" secondAttribute="leading" id="YZd-ci-i9I"/>
+                            <constraint firstItem="ZgN-cY-EVE" firstAttribute="trailing" secondItem="Tag-09-gZW" secondAttribute="trailing" id="qjm-to-LqE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Tag-09-gZW"/>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="WW1-bw-6V2" id="SS7-Nf-uK7"/>
-                        <outlet property="scrollView" destination="ZPE-Or-geC" id="xrU-GO-r0V"/>
+                        <outlet property="imageView" destination="X5o-UZ-ylq" id="rDb-Sf-IG3"/>
+                        <outlet property="scrollView" destination="ZgN-cY-EVE" id="YQO-c2-Z2C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PPp-ef-KPA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -168,7 +168,4 @@
             <point key="canvasLocation" x="-126201" y="-754"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Car.jpg" width="204.47999572753906" height="204.47999572753906"/>
-    </resources>
 </document>
