--- a/ScaleModelCatalog/Modules/Collection/ModelCell/ModelViewCell.xib
+++ b/ScaleModelCatalog/Modules/Collection/ModelCell/ModelViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,17 +11,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Model" id="fgC-CT-FGZ" customClass="ModelViewCell" customModule="ScaleModelCatalog" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="235" height="239"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="hf1-N5-N1s">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="235" height="239"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z4C-aa-7wd">
-                        <rect key="frame" x="10" y="10" width="100" height="100"/>
+                        <rect key="frame" x="10" y="10" width="215" height="189"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dlN-Uk-7ch">
-                        <rect key="frame" x="10" y="118" width="100" height="24"/>
+                        <rect key="frame" x="10" y="207" width="215" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="0a2-oY-fQ9"/>
                         </constraints>
@@ -30,8 +31,8 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Z4C-aa-7wd" firstAttribute="centerX" secondItem="hf1-N5-N1s" secondAttribute="centerX" id="5Ai-1g-pfB"/>
                     <constraint firstItem="dlN-Uk-7ch" firstAttribute="bottom" secondItem="hf1-N5-N1s" secondAttribute="bottomMargin" id="A2I-u0-CRu"/>
+                    <constraint firstAttribute="trailing" secondItem="Z4C-aa-7wd" secondAttribute="trailing" constant="10" id="VD3-y1-y1b"/>
                     <constraint firstItem="Z4C-aa-7wd" firstAttribute="leading" secondItem="dlN-Uk-7ch" secondAttribute="leading" id="XlU-WC-EqG"/>
                     <constraint firstItem="dlN-Uk-7ch" firstAttribute="top" secondItem="Z4C-aa-7wd" secondAttribute="bottom" constant="8" id="cxI-jR-WLe"/>
                     <constraint firstItem="Z4C-aa-7wd" firstAttribute="top" secondItem="hf1-N5-N1s" secondAttribute="top" constant="10" id="mYd-iC-FWL"/>
@@ -39,11 +40,12 @@
                     <constraint firstItem="Z4C-aa-7wd" firstAttribute="leading" secondItem="hf1-N5-N1s" secondAttribute="leading" constant="10" id="wDO-f6-Pxv"/>
                 </constraints>
             </collectionViewCellContentView>
+            <size key="customSize" width="235" height="239"/>
             <connections>
                 <outlet property="modelImage" destination="Z4C-aa-7wd" id="qP5-V2-63A"/>
                 <outlet property="modelName" destination="dlN-Uk-7ch" id="3BP-Wv-0tp"/>
             </connections>
-            <point key="canvasLocation" x="-81.159420289855078" y="83.705357142857139"/>
+            <point key="canvasLocation" x="2.1739130434782612" y="113.50446428571428"/>
         </collectionViewCell>
     </objects>
 </document>
